@@ -1,10 +1,7 @@
 package com.robertx22.age_of_exile.mmorpg.registers.common;
 
 import com.robertx22.age_of_exile.mmorpg.Packets;
-import com.robertx22.age_of_exile.vanilla_mc.packets.OpenSpellSetupContainerPacket;
-import com.robertx22.age_of_exile.vanilla_mc.packets.RequestAreaSyncPacket;
-import com.robertx22.age_of_exile.vanilla_mc.packets.RequestTilePacket;
-import com.robertx22.age_of_exile.vanilla_mc.packets.SpendStatPointsPacket;
+import com.robertx22.age_of_exile.vanilla_mc.packets.*;
 import com.robertx22.age_of_exile.vanilla_mc.packets.spells.CastSpellPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.spells.HotbarSetupPacket;
 import com.robertx22.age_of_exile.vanilla_mc.packets.sync_cap.RequestSyncCapToClient;
@@ -13,6 +10,7 @@ public class C2SPacketRegister {
 
     public static void register() {
 
+        Packets.registerClientToServerPacket(new ModifyItemPacket());
         Packets.registerClientToServerPacket(new RequestTilePacket());
         Packets.registerClientToServerPacket(new RequestSyncCapToClient());
         Packets.registerClientToServerPacket(new SpendStatPointsPacket());
