@@ -4,21 +4,25 @@ import com.mojang.blaze3d.systems.RenderSystem;
 import com.robertx22.age_of_exile.database.data.currency.loc_reqs.BaseLocRequirement;
 import com.robertx22.age_of_exile.database.data.currency.loc_reqs.LocReqContext;
 import com.robertx22.age_of_exile.gui.buttons.HelpButton;
+import com.robertx22.age_of_exile.mmorpg.Packets;
 import com.robertx22.age_of_exile.mmorpg.Ref;
-import com.robertx22.age_of_exile.uncommon.localization.CLOC;
 import com.robertx22.age_of_exile.uncommon.localization.Words;
+import com.robertx22.age_of_exile.uncommon.utilityclasses.GuiUtils;
 import com.robertx22.age_of_exile.vanilla_mc.blocks.bases.TileGui;
+import com.robertx22.age_of_exile.vanilla_mc.packets.ModifyItemPacket;
 import net.fabricmc.api.EnvType;
 import net.fabricmc.api.Environment;
 import net.minecraft.client.MinecraftClient;
+import net.minecraft.client.gui.widget.TexturedButtonWidget;
 import net.minecraft.client.util.math.MatrixStack;
 import net.minecraft.entity.player.PlayerInventory;
 import net.minecraft.text.LiteralText;
 import net.minecraft.text.MutableText;
 import net.minecraft.text.Text;
+import net.minecraft.util.Formatting;
 import net.minecraft.util.Identifier;
+import net.minecraft.util.math.BlockPos;
 
-import java.awt.*;
 import java.util.ArrayList;
 import java.util.List;
 
@@ -31,7 +35,7 @@ public class GuiGearModify extends TileGui<ContainerGearModify, TileGearModify> 
     public GuiGearModify(ContainerGearModify cont, PlayerInventory invPlayer, MutableText comp) {
         super(cont, invPlayer, new LiteralText(""), TileGearModify.class);
 
-        backgroundWidth = 256;
+        backgroundWidth = 176;
         backgroundHeight = 207;
 
     }
@@ -55,8 +59,9 @@ public class GuiGearModify extends TileGui<ContainerGearModify, TileGearModify> 
         list.add(new LiteralText("Put the gear on one side, and the currency-"));
         list.add(new LiteralText("or jewel at the other."));
 
-        this.addButton(new HelpButton(list, this.x + this.backgroundWidth, this.y));
+        this.addButton(new HelpButton(list, this.x + this.backgroundWidth - 25, this.y + 5));
 
+        this.addButton(new CraftButton(tile.getPos(), this.x + 58, this.y + 85));
     }
 
     @Override
@@ -85,35 +90,68 @@ public class GuiGearModify extends TileGui<ContainerGearModify, TileGearModify> 
     protected void drawForeground(MatrixStack matrix, int mouseX, int mouseY) {
         super.drawForeground(matrix, mouseX, mouseY);
 
-        LocReqContext context = tile.getLocReqContext();
-        if (context.effect != null && context.hasStack()) {
-            int y = 80;
-
-            boolean add = true;
-
-            for (BaseLocRequirement req : context.effect.requirements()) {
-                if (req.isNotAllowed(context)) {
-                    String txt = CLOC.translate(req.getText());
-
-                    if (add) {
-                        String reqtext = CLOC.translate(Words.RequirementsNotMet.locName()) + ": ";
-
-                        font.draw(matrix,
-                            reqtext, this.backgroundWidth / 2 - font.getWidth(reqtext) / 2, y, Color.red.getRGB());
-                        y += font.fontHeight + 1;
-                        add = false;
-                    }
-
-                    font.draw(matrix, txt, this.backgroundWidth / 2 - font.getWidth(txt) / 2, y, Color.red.getRGB());
-                    y += font.fontHeight;
-                }
-            }
-
-        }
-
         final int LABEL_XPOS = 5;
         final int LABEL_YPOS = 5;
-        font.draw(matrix, CLOC.translate(tile.getDisplayName()), LABEL_XPOS, LABEL_YPOS, Color.darkGray.getRGB());
+        // font.draw(matrix, CLOC.translate(tile.getDisplayName()), LABEL_XPOS, LABEL_YPOS, Color.darkGray.getRGB());
+
+    }
+
+    private static final Identifier BUTTON_TEX = new Identifier(Ref.MODID, "textures/gui/craftbutton.png");
+    static int BUTTON_SIZE_X = 61;
+    static int BUTTON_SIZE_Y = 20;
+
+    public class CraftButton extends TexturedButtonWidget {
+        BlockPos pos;
+
+        public CraftButton(BlockPos pos, int xPos, int yPos) {
+            super(xPos, yPos, BUTTON_SIZE_X, BUTTON_SIZE_Y, 0, 0, BUTTON_SIZE_Y, BUTTON_TEX, (button) -> {
+                Packets.sendToServer(new ModifyItemPacket(pos));
+            });
+            this.pos = pos;
+        }
+
+        @Override
+        public void renderToolTip(MatrixStack matrix, int x, int y) {
+            if (isInside(x, y)) {
+
+                try {
+                    List<Text> tooltip = new ArrayList<>();
+
+                    LocReqContext context = tile.getLocReqContext();
+                    if (context.effect != null && context.hasStack()) {
+                        boolean add = true;
+
+                        for (BaseLocRequirement req : context.effect.requirements()) {
+                            if (req.isNotAllowed(context)) {
+
+                                if (add) {
+                                    tooltip.add(Words.RequirementsNotMet.locName()
+                                        .formatted(Formatting.RED));
+                                    add = false;
+                                }
+                                tooltip.add(req.getText()
+                                    .formatted(Formatting.GOLD));
+
+                            }
+                        }
+                    }
+
+                    if (tooltip.isEmpty()) {
+                        tooltip.add(new LiteralText("Modify Item"));
+                    }
+
+                    GuiUtils.renderTooltip(matrix,
+                        tooltip, x, y);
+                } catch (Exception e) {
+                    e.printStackTrace();
+                }
+
+            }
+        }
+
+        public boolean isInside(int x, int y) {
+            return GuiUtils.isInRect(this.x, this.y, BUTTON_SIZE_X, BUTTON_SIZE_Y, x, y);
+        }
 
     }
 
