@@ -3,12 +3,10 @@
   "package": "com.robertx22.age_of_exile.mixins",
   "compatibilityLevel": "JAVA_8",
   "mixins": [
-    "ArrowShootMixin",
-    "BiomeAccessor",
+    "ArrowShootMixin",    
     "ChestMixin",
     "DefaultBiomeFeaturesMixin",
-    "FoodComponentMixin",
-    "GenerationSettingsAccessor",
+    "FoodComponentMixin",    
     "LivingEntityMixin",        
     "OnCraftMixin",
     "PlayerManagerMixin",
